<resources>
    <string name="app_name">Cactus Notes</string>
    <string name="sign_up_tool_bar_name">Sign up</string>
    <string name="login_tool_bar_name">Log in</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="e_mail">E-mail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="e_mail_or_username">E-mail or Username</string>
    <string name="password_too_short">Password is too short.</string>
    <string name="password_too_long">Password is too long.</string>
    <string name="password_is_required">Password is required.</string>
    <string name="password_must_contain">Password must contain one digit, one uppercase letter, one lowercase letter and one special character.</string>
    <string name="e_mail_required">Email is required. </string>
    <string name="e_mail_invalid">Email is invalid. </string>
    <string name="username_is_required">Username is required.</string>
    <string name="username_too_short">Username is too short.</string>
    <string name="username_too_long">Username is too long.</string>
    <string name="username_can_only_include">Username can only include a-z, 0-9 and _ characters.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="some_error_occurred">Some error occurred. Please try again later.</string>
    <string name="couldnt_connect_to_servers">Couldn’t connect to the servers. Please check your connection.</string>
    <string name="registered">You are registered now.</string>
    <string name="e_mail_or_username_required">Email or username is required.</string>
    <string name="invalid_credentials">Invalid credentials. Please double-check your e-mail, username or password.</string>
    <string name="you_dont_have_any_notes">You don’t have any notes. Click below button to add one!</string>
    <string name="log_out">Log out</string>
    <string name="empty_title">Untitled</string>
    <string name="empty_note">Write something...</string>
    <string name="cancel">CANCEL</string>
    <string name="delete">DELETE</string>
    <string name="share">Share</string>
    <string name="this_action_is_irreversible">This action is irreversable. Are you sure you want to delete this note?</string>
    <string name="your_note_is_deleted">Your note: %s is deleted now.</string>
    <string name="you_need_login">You need to log in again</string>
</resources>